--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,14 @@
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
+
+
+    <string name="Locations_welcome">Locations Options</string>
+    <string name="Back">Back</string>
+    <string name="Add">Add</string>
+    <string name="View">View</string>
+
+
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
