--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="Back">Back</string>
     <string name="Add">Add</string>
     <string name="View">View</string>
+    <string name="Submit">Submit</string>
 
 
     <string name="next">Next</string>
