--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="second_fragment_label">Second Fragment</string>
 
 
-    <string name="Locations_welcome">Locations Options</string>
+    <string name="Locations_welcome">Locations</string>
     <string name="Back">Back</string>
     <string name="Add">Add</string>
     <string name="View">View</string>
