--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,8 @@
     <string name="choose_side_dish">Choose Side Dish</string>
     <string name="next">Next</string>
     <string name="order_checkout">Order Checkout</string>
-    <string name="start_order">Start Order</string>
+    <string name="start_order">Locations</string>
+    <string name="to_do_list">To-Do</string>
     <string name="order_summary">Order Summary</string>
     <string name="subtotal">Subtotal: %s</string>
     <string name="tax">Tax: %s</string>
