--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,8 @@
     <string name="back_button">Back</string>
     <string name="cancel">Cancel</string>
     <string name="choose_accompaniment">Choose Accompaniment</string>
-    <string name="choose_entree">Choose Entree</string>
-    <string name="choose_side_dish">Choose Side Dish</string>
+    <string name="choose_entree">View Locations</string>
+    <string name="choose_side_dish">Add Location</string>
     <string name="next">Next</string>
     <string name="order_checkout">Order Checkout</string>
     <string name="start_order">Locations</string>
