--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
   -->
 <resources>
     <string name="app_name">Select Activity</string>
+    <string name="signin">SignIn</string>
+    <string name="signup">SignUp</string>
     <string name="back_button">Back</string>
     <string name="cancel">Cancel</string>
     <string name="choose_accompaniment">Choose Accompaniment</string>
