--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="choose_accompaniment">Choose Accompaniment</string>
     <string name="choose_entree">View Locations</string>
     <string name="choose_side_dish">Add Location</string>
+    <string name="Details">Details</string>
     <string name="next">Next</string>
     <string name="order_checkout">Order Checkout</string>
     <string name="start_order">Locations</string>
