--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="submit">Submit</string>
     <string name="ToDoView">ToDo View</string>
     <string name="ToDoAdd">ToDo Add</string>
+    <string name="audioFile">"audio.mp3"</string>
 </resources>
